added a ReadMe and fixed the button issue, it leads them to sample 2 now.